namespace Domain.Items
{
    internal interface IBlock : IItem
    {
        void Place();
    }
}