namespace Domain.Items
{
    internal interface IUseable : IItem
    {
        void Use();
    }
}